--- a/person2.html
+++ b/person2.html
@@ -8,14 +8,38 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Home</h1></a>
+        <nav>
+            <a href="index.html"><h1>Home</h1></a>
+            <ul>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skill">Skill</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="intro">
-            <h1>Jirakhun</h1>
-            <h4>Student at Mahidol University</h4>
-        </div>
-        <p>My name is Jirakhun. I am a student at Mahidol University. I am studying computer science. I am interested in web development.</p>
+        <section id="name">
+            <img src="img/jsri.jpg" alt="jsri" width="200px">
+            <h1>Jirakhun Sricham</h1>
+        </section>
+        <section id="experience">
+            <h1>Experience</h1>
+            <ul>
+                <li>1 years Audio Engineering</li>
+            </ul>
+        </section>
+        <section id="skill">
+            <h1>Skill</h1>
+            <ul>
+                <li>Professional Audio Engineering</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h1>Contact</h1>
+            <h4>You can contact me via</h4>
+            <p>Email: Jirakun.s@gmail.com</p>
+            <p>Tel: 097-152-6594</p>
+        </section>
     </main>
     <script src="scripts.js"></script>
 </body>
