--- a/person1.html
+++ b/person1.html
@@ -8,14 +8,41 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Home</h1></a>
+        <nav>
+            <a href="index.html"><h1>Home</h1></a>
+            <ul>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skill">Skill</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="intro">
-            <h1>Akkaracha</h1>
-            <h4>Student at Mahidol University</h4>
-        </div>
-        <p>My name is Akkaracha. I am a student at Mahidol University. I am studying computer science. I am interested in web development.</p>
+        <section id="name">
+            <img src="img/among.jpg" alt="among" width="200px">
+            <h1>Akkaracha Mongkonsupanimit</h1>
+        </section>
+        <section id="experience">
+            <h1>Experience</h1>
+            <ul>
+                <li>1 years of music composer</li>
+                <li>2 years of musical tutor</li>
+            </ul>
+        </section>
+        <section id="skill">
+            <h1>Skill</h1>
+            <ul>
+                <li>music producer</li>
+                <li>sound engineer</li>
+                <li>Handcraft woodwork</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h1>Contact</h1>
+            <h4>You can contact me via</h4>
+            <p>Email: beamppppp0809@gmail.com</p>
+            <p>Tel: 089-515-3737</p>
+        </section>
     </main>
     <script src="scripts.js"></script>
 </body>
