--- a/person2.html
+++ b/person2.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jirakhun</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html"><h1>Home</h1></a>
             <ul>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skill">Skill</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a id="exp-nav" href="#experience">Experience</a></li>
+                <li><a id="skill-nav" href="#skill">Skill</a></li>
+                <li><a id="contact-nav" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -39,6 +40,7 @@
             <h4>You can contact me via</h4>
             <p>Email: Jirakun.s@gmail.com</p>
             <p>Tel: 097-152-6594</p>
+            <a id="social" href="https://www.facebook.com/JsPtNn" target="_blank">Facebook</a>
         </section>
     </main>
     <script src="scripts.js"></script>
